// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup component matches snapshot (default props) 1`] = `
<button
  className="fdsIconButton rounded--all border--focus--noTransition transition--default alignChild--center--center fdsIconButton--ghost fdsIconButton--m"
  title="Label"
>
  <span
    className=""
  >
    <Icon
      customSize={18}
    />
  </span>
</button>
`;

exports[`ButtonGroup component matches snapshot (set all props) 1`] = `
<button
  className="shape--circle fdsIconButton--disabled fdsIconButton--isDestructive fdsIconButton--loading fdsIconButton rounded--all border--focus--noTransition transition--default alignChild--center--center fdsIconButton--aqua fdsIconButton--s"
  disabled={true}
  title="Label"
>
  <span
    className="fdsIconButton--hidden"
  >
    <Icon
      customSize={16}
    />
  </span>
</button>
`;
